# MackensteinCAM

./: CMakeLists.txt  LICENSE  README.md  findelectrodes.cpp  findelectrodes.h  main.cpp  matches.h  twoview.cpp  twoview.h
example/: calibLTRT_CAMH.xml
